# system

./: .ansible-lint  .dprint.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .markdownlintignore  .typos.toml  .yamllint  AGENTS.md  Brewfile  Justfile  Makefile  README.md  ansible.cfg  devenv.nix  devenv.yaml  pyproject.toml
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
ansible/: .gitattributes  ansible.cfg  hosts  requirements.yml
ansible/group_vars/: all.yml  desktop.yml  macos.yml  ubuntu.yml  work.yml
ansible/host_vars/: augustus.yml  justinian.yml
ansible/playbooks/: bootstrap.yml  reboot.yml  site.yml  upgrade.yml
config/: .gitattributes  Xresources  aider.conf.yml  alacritty.toml  bashrc  iosevka-build-plans.toml  keyd.conf  kube-config.yaml  kube.yaml  opencode.jsonc  pacman.conf  picom.conf  spotifyd.conf  starship.toml  tmux.conf  xinitrc
config/XColors/: gruvbox.Xresources  horizon.Xresources  nord.XResources
config/aerospace/: aerospace.toml
config/alacritty/: alacritty.toml
config/bat/: config
config/broot/: config.toml
config/doom/: config.el  init.el  packages.el
config/emacs/: early-init.el  init.el
config/fish/: .gitignore  config.fish  fish_plugins
config/git/: aliases  config  config_work  delta  ignore
config/gnupg/: gpg-agent.conf  gpg.conf
config/helix/: config.toml  languages.toml
config/i3/: config
config/k9s/: config.yaml
config/kube/: config
config/nushell/: aliases.nu  config.nu  (+5 more)
etc/: bashrc  ssh_config
(+178 files in other folders)
