[project]
name = "system"
version = "0.1.0"
description = "System management and configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ansible>=11.3.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [
  ".direnv",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible/collections",
  "ansible/roles/*.*/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "PL", "RUF"]
ignore = ["E501", "PLR2004"]
exclude = [
  ".direnv",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible/collections",
  "ansible/roles/*.*/**",
]

[dependency-groups]
dev = [
  "ansible-lint>=25.11.1",
  "basedpyright>=1.34.0",
  "python-lsp-server>=1.13.2",
  "ruff>=0.14.6",
  "yamllint>=1.37.1",
]
